# RagThisCode

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  chat.py  common.py  get_documents.ipynb  local_chat.py  main.py  proxy.py  pyproject.toml  server.py  start_mcp_server.py  store_code_in_vector_db.py
frontend/: github_button.html  github_button_snippet.html  index.html  main.jsx  redirect.html  repo_loading.html  repo_loading.js  styles.css
