[project]
name = "ragthiscode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.77",
    "langchain-openai>=0.3.34",
    "langchain-text-splitters>=0.3.11",
]
